kind/sample-helloworld.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 13306
    targetPort: 8000
    nodePort: 32019
  selector:
    app: helloworld
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
      protocol: TCP
      port: 8031
      targetPort: 8000
      nodePort: 32019
  selector:
    k8s-app: helloworld
---
kind: Pod
apiVersion: v1
metadata:
  name: helloworld
spec:
  containers:
    - name: helloworld
      image: canbefree/helloworld:1.0

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  selector:
    matchLabels:
      app: helloworld
  template:
      metadata:
        labels:
          app: helloworld
      spec:
        containers:
          - name: helloworld
            image: canbefree/helloworld:1.0
            ports:
            - containerPort: 8000
